src/rust/dcmfx_cli/tests/snapshots/rewrite__errors_on_missing_file.snap
---
source: dcmfx_cli/tests/rewrite.rs
expression: get_stderr(assert)
---
Error: Input file 'file-that-does-not-exist.dcm' does not exist
